# TimeBot

./: .pre-commit-config.yaml  LICENSE  README.md  config.example.toml  launcher.py  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: main.yml
constants/: __init__.py  constants.py  meta.py
core/: __init__.py  bot.py  logs.py
tests/: __init__.py  test_main.py
