[build-system]
requires = ["setuptools >= 62.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timebot"
version = "0.0.1"
requires-python = ">=3.7"
description = "A Discord bot."
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }

[tool.setuptools.packages.find]
include = ["constants", "core", "launcher.py"]
exclude = ["tests"]


[tool.black]
line-length = 79
include = '.pyi?%'

[tool.pytest.ini_options]
addopts = "--cov-report=html --cov=src"
testpaths = ["tests"]

[tool.mypy]
mypy_path = "."
ignore_missing_imports = true

[tool.pydocstyle]
match = 'src(.*)\.py'
convention = "google"
